# bitsatards_bot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  analytics.py  branch_names.txt  data_pipeline.py  helper_notebook.ipynb  init_db.py  main.py  predictions.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: main.yml  release.yml  test.yml
data/: cutoff_2017.csv  cutoff_2018.csv  cutoff_2019.csv  cutoff_2020.csv  cutoff_2021.csv  cutoff_2022.csv  cutoff_2023.csv  cutoff_2024.csv  cutoff_2025.csv
database/: connection.py  models.py  repository.py
models/: model.pkl  scaler.pkl
services/: exam_tracker.py  reminder.py
tests/: conftest.py  database_test.py  services_test.py
